# tonic-chat

./: .gitignore  Cargo.toml  README.md  build.rs
proto/: chat.proto
src/: client.rs  server.rs
