[package]
name = "tonic-chat"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros", "io-std"] }
tokio-stream = "0.1.18"

tonic = "0.14.3"
tonic-prost = "0.14.3"
prost = "0.14.3"
clap = { version = "4.5.58", features = ["derive"] }

[build-dependencies]
tonic-prost-build = "0.14.3"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"
